--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "filehound": "^1.12.4",
     "fs-extra": "^5.0.0",
+    "node-sass": "^4.9.0",
     "postcss": "6.0.19",
     "postcss-cssnext": "3.1.0",
     "postcss-import": "11.1.0",
     "postcss-loader": "2.1.1",
+    "sass-loader": "^7.0.3",
     "style-loader": "0.20.2",
     "webpack": "4.1.0",
     "webpack-dev-middleware": "3.0.0",
